Fix export button spacing

--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ button {
 }
 
 .btn-download {
-	margin-left: 20px;
+	margin: 20px;
+	margin-right: 0;
 }
 
 
